--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -4,6 +4,11 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge' />
         <link rel='stylesheet' href='styles/index.css' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+        <meta
+            name='description'
+            content='A simple notebook. You can write whatever your thoughts are and have them saved and beautifully arranged for you.'
+        />
+        <meta keywords='notebook book note notes simple reminder thoughts' />
         <script
             src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'
         >
@@ -18,11 +23,10 @@
             src='https://unpkg.com/react-dom@17/umd/react-dom.production.min.js'
         ></script>
         <script type='module' defer src='./scripts/index.js'></script>
-        <title>React</title>
+        <title>Just Write A Note.</title>
     </head>
     <body>
         <div id='root'>
-
         </div>
     </body>
 </html>
