--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -2,16 +2,13 @@
     <head>
         <meta charset='UTF-8' />
         <meta http-equiv='X-UA-Compatible' content='IE=edge' />
-        <link rel='stylesheet' href='styles/index.css' />
+        <link rel='stylesheet' href='styles/test.css' />
         <meta name='viewport' content='width=device-width, initial-scale=1.0' />
         <meta
             name='description'
             content='A simple notebook. You can write whatever your thoughts are and have them saved and beautifully arranged for you.'
         />
         <meta keywords='notebook book note notes simple reminder thoughts' />
-        <script
-            src='https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js'
-        >
         </script>
         <script
             crossorigin
